--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 
   <div class="bmac-area">
-    <a href="https://www.buymeacoffee.com/vibostream" target="_blank" class="bmac-btn">
+    <a href="https://www.buymeacoffee.com/inboxwendyz/vib" target="_blank" class="bmac-btn">
       <img src="https://img.buymeacoffee.com/button-api/?text=Support the Sanctuary&emoji=🎞️&slug=vibostream&button_colour=f97316&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" />
     </a>
   </div>
