Change Buy Me a Coffee link and button image
Updated Buy Me a Coffee link and image for support.

--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
     Digital curator and developer building ambient sanctuaries. I bridge the gap between nostalgic archives and real-time AI to fuel focus and solve choice paralysis.
   </div>
 
-  <div class="bmac-area">
-    <a href="https://www.buymeacoffee.com/wendybriel" target="_blank" class="bmac-btn">
-      <img src="https://img.buymeacoffee.com/button-api/?text=Support the Sanctuary&emoji=🎞️&slug=wendybriel&button_colour=f97316&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" />
-    </a>
-  </div>
-
+ <div class="bmac-area">
+  <a href="https://buymeacoffee.com/inboxwendyz" target="_blank" class="bmac-btn">
+    <img src="https://img.buymeacoffee.com/button-api/?text=Support the Sanctuary&emoji=🎞️&slug=inboxwendyz&button_colour=f97316&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" />
+  </a>
+</div>
   <div class="notice">
     <strong>Proprietary Curation Schema</strong><br>
     © 2026 Vibostream. All Rights Reserved. <br>
