Revise Buy Me a Coffee link and button design
Updated the Buy Me a Coffee link and button styles.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
   </div>
 
  <div class="bmac-area">
-  <a href="https://buymeacoffee.com/inboxwendyz" target="_blank" class="bmac-btn">
-    <img src="https://img.buymeacoffee.com/button-api/?text=Support the Sanctuary&emoji=🎞️&slug=inboxwendyz&button_colour=f97316&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" />
+  <a href="https://www.buymeacoffee.com/inboxwendyz" target="_blank" 
+     style="background-color: #f97316; color: white; padding: 18px 30px; text-decoration: none; border-radius: 50px; font-weight: 900; display: inline-block; font-family: 'Inter', sans-serif; box-shadow: 0 10px 20px rgba(249, 115, 22, 0.3);">
+     🎞️ SUPPORT THE SANCTUARY
   </a>
 </div>
   <div class="notice">
