Remove box shadow from support button style

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
  <div class="bmac-area">
   <a href="https://www.buymeacoffee.com/inboxwendyz" target="_blank" 
-     style="background-color: #f97316; color: white; padding: 18px 30px; text-decoration: none; border-radius: 50px; font-weight: 900; display: inline-block; font-family: 'Inter', sans-serif; box-shadow: 0 10px 20px rgba(249, 115, 22, 0.3);">
+     style="background-color: #f97316; color: white; padding: 18px 30px; text-decoration: none; border-radius: 50px; font-weight: 900; display: inline-block; font-family: 'Inter', sans-serif;">
      🎞️ SUPPORT THE SANCTUARY
   </a>
 </div>
